--- a/ToDoMvc/Views/Shared/_Layout.cshtml
+++ b/ToDoMvc/Views/Shared/_Layout.cshtml
@@ -6,45 +6,10 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400;300' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
-    <div class="menu">
-
-        <!-- Menu icon -->
-        <div class="icon-close">
-            <img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
-        </div>
-
-        <!-- Menu -->
-        <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Help</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
-
-    <!-- Main body -->
-    <div class="jumbotron">
-        <div class="icon-menu">
-            <i class="fa fa-bars"></i>
-            Menu
-        </div>
-    </div>
-
-    @RenderBody()
-    
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @Scripts.Render("~/bundles/app")
-    @RenderSection("scripts", required: false)
-</body>
-</html>
-
-
-@*<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -64,10 +29,13 @@
             </div>
         </div>
     </div>
+
     <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>*@
+        @RenderBody()        
+    </div>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
+</body>
+</html>
