--- a/ToDoMvc/Content/Site.css
+++ b/ToDoMvc/Content/Site.css
@@ -28,9 +28,162 @@ textarea {
 
 /* Initial menu */
 .menu {
-  background: #202024 url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/black-thread.png') repeat left top;
-  left: -285px;  /* start off behind the scenes */
-  height: 100%;
-  position: fixed;
-  width: 285px;
+    background: #202024 url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/black-thread.png') repeat left top;
+    left: -285px; /* start off behind the scenes */
+    height: 100%;
+    position: fixed;
+    width: 285px;
+}
+
+#todo-board {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    padding: 0 10px;
+    background-color: yellow;
+}
+
+#todo-table {
+    margin: 10px 0;
+    padding: 0;
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: separate;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.board-compact-columnHeader .columnHeader-name {
+    font-size: 15px;
+    font-weight: bold;
+    top: 11px;
+}
+
+.board-compact-columnHeader .columnHeader-warningIcon {
+    vertical-align: -3px;
+}
+
+.column-first {
+    border-left: 1px solid #c0c0c0;
+}
+
+.columnHeader {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    background-color: #f4f4f4;
+    border-top: 1px solid #c0c0c0;
+    border-left: 1px dashed #c0c0c0;
+    height: 48px;
+    -ms-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.columnHeader-expand {
+    position: absolute;
+    top: 4px;
+    left: 6px;
+    width: 16px;
+    height: 16px;
+    background: url(/Content/toggle-expand.png) no-repeat;
+    cursor: pointer;
+    display: none;
+}
+
+.columnHeader-collapse {
+    position: absolute;
+    left: 6px;
+    top: 4px;
+    width: 16px;
+    height: 16px;
+    background: url(/Content/toggle.png) no-repeat;
+    cursor: pointer;
+    opacity: .3;
+}
+
+.columnHeader-addTask {
+    position: absolute;
+    right: 7px;
+    top: 10px;
+    width: 24px;
+    height: 24px;
+    background: url(/Content/plus.png) no-repeat;
+    cursor: pointer;
+}
+
+.columnHeader-inner {
+    position: relative;
+    height: 30px;
+    padding: 8px 0;
+}
+
+.columnHeader-name {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-size: 20px;
+    margin: 0;
+    white-space: nowrap;
+    position: absolute;
+    left: 34px;
+    right: 34px;
+    top: 8px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    cursor: pointer;
+}
+
+h2 {
+    color: #111;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+.board-compact-columnHeader .columnHeader-warningIcon {
+    vertical-align: -3px;
+}
+
+.columnHeader-warningIcon {
+    display: none;
+}
+
+.board-swimlane {
+    border: 1px solid #c0c0c0;
+}
+
+#todo-table td {
+    vertical-align: top;
+}
+
+.swimlane-last .board-collapsedColumnNameCell, .swimlane-last .board-taskListCell {
+    border-bottom: 1px solid #c0c0c0;
+}
+
+.column-first {
+    border-left: 1px solid #c0c0c0;
+}
+
+.board-collapsedColumnNameCell {
+    display: none;
+    border-top: 1px solid #c0c0c0;
+    border-left: 1px dashed #c0c0c0;
+    cursor: pointer;
+}
+
+.board-taskListCell {
+    border-top: 1px solid #c0c0c0;
+    border-left: 1px dashed #c0c0c0;
+    position: relative;
 }
