--- a/ToDoMvc/Content/Site.css
+++ b/ToDoMvc/Content/Site.css
@@ -40,3 +40,41 @@ textarea {
     #todo-table td {
         border: 1px solid black;
     }
+
+.sticky {
+    /* General */
+    margin: 5px auto 0 auto;
+    padding: 2px 2px;
+    width: 90%;
+    /* Font */
+    font-family: 'Nothing You Could Do', Arial;
+    font-size: 1em;
+    /* Border */
+    border: 1px #E8D547 solid;
+    /* Shadow */
+    -moz-box-shadow: 0px 0px 6px 1px #333333;
+    -webkit-box-shadow: 0px 0px 6px 1px #333333;
+    box-shadow: 0px 0px 6px 1px #333333;
+    /* Background */
+    background: #fefdca; /* Old browsers */
+    background: -moz-linear-gradient(top, #fefdca 0%, #f7f381 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fefdca), color-stop(100%,#f7f381)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, #fefdca 0%,#f7f381 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, #fefdca 0%,#f7f381 100%); /* Opera11.10+ */
+    background: -ms-linear-gradient(top, #fefdca 0%,#f7f381 100%); /* IE10+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefdca', endColorstr='#f7f381',GradientType=0 ); /* IE6-9 */
+    background: linear-gradient(top, #fefdca 0%,#f7f381 100%); /* W3C; A catch-all for everything else */
+}
+
+    .sticky ol {
+        margin: 12px;
+    }
+
+    .sticky p {
+        text-align: center;
+    }
+
+
+ul {
+    list-style: none;
+}
