--- a/ToDoMvc/Views/Shared/_Layout.cshtml
+++ b/ToDoMvc/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         </div>
     </div>
 
-    <div class="container body-content">
+    <div class="body-content">
         @RenderBody()        
     </div>
 
