--- a/ToDoMvc/Views/Home/Index.cshtml
+++ b/ToDoMvc/Views/Home/Index.cshtml
@@ -2,44 +2,15 @@
     ViewBag.Title = "Home Page";
 }
 
-<div id="todo-board">
-    <a id="moveOneDateBefore" style="float: left" href="#">&lArr;</a>
-    <a id="moveOneDateAfter" style="float: right" href="#">&rArr;</a>
-    <table id="todo-table">
-        <thead>
-            <tr>
-                @for (int i = -1; i < 6; i++)
-                {
-                    <th id="head-@DateTime.Now.Date.AddDays(i).ToString("yyyy-MM-dd")" data-date="@DateTime.Now.Date.AddDays(i).ToString("yyyy-MM-dd")">
-                        @DateTime.Now.Date.AddDays(i).ToString("yyyy-MM-dd")
-                    </th>
-                }
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                @for (int i = -1; i < 6; i++)
-                {
-                    <td id="cell-@DateTime.Now.Date.AddDays(i).ToString("yyyy-MM-dd")" class="connectedSortable">
-                        @*<div class="sticky">
-                                <p>
-                                    <strong>@i to-do list</strong>
-                                    <br />
-                                    <small>Monday, September 19th</small>
-                                </p>
-                                <ul>
-                                    <li>Write a blog post</li>
-                                    <li>Go to the bank</li>
-                                    <li>Study for exams</li>
-                                    <li>Renew web hosting account and domain name</li>
-                                    <li>Learn something new</li>
-                                    <li>Update project log</li>
-                                </ul>
-                            </div>*@
-                    </td>
-                }
-            </tr>
+<div id="row todo-board">
+    @*<a id="moveOneDateBefore" style="float: left" href="#">&lArr;</a>
+        <a id="moveOneDateAfter" style="float: right" href="#">&rArr;</a>*@
 
-        </tbody>
-    </table>
+    @for (int i = -1; i < 5; i++)
+    {
+        <div class="col-md-2 todo-column" id="div-@DateTime.Now.Date.AddDays(i).ToString("yyyy-MM-dd")">
+            <div class="todo-column-header"></div>
+            <div class="todo-column-content"></div>
+        </div>
+    }
 </div>
