--- a/ToDoMvc/Views/Home/Index.cshtml
+++ b/ToDoMvc/Views/Home/Index.cshtml
@@ -14,3 +14,8 @@
         </div>
     }
 </div>
+<div class="row todo-board">
+    <div class="col-md-12 template-area">
+        
+    </div>
+</div>
