--- a/ToDoMvc/Views/Shared/_Layout.cshtml
+++ b/ToDoMvc/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Categories", "Index", "Categories")</li>
                     <li>@Html.ActionLink("Tags", "Index", "Tags")</li>
+                    <li>@Html.ActionLink("Templates", "Index", "TodoTaskTemplates")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
