--- a/ToDoMvc/Views/TodoTaskTemplates/Create.cshtml
+++ b/ToDoMvc/Views/TodoTaskTemplates/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ToDoMvc.Models.TodoTaskTemplate
+﻿@model ToDoMvc.Models.ViewModels.TodoTaskTemplateVM
 
 @{
     ViewBag.Title = "Create";
@@ -16,53 +16,54 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Template.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Template.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Template.Name, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DefaultTaskTitle, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Template.DefaultTaskTitle, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DefaultTaskTitle, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DefaultTaskTitle, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Template.DefaultTaskTitle, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Template.DefaultTaskTitle, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DefaultCategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Template.Category, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DefaultCategoryId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DefaultCategoryId, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.Template.CategoryId, Model.Categories, htmlAttributes: new { @class = "form-control" })
+                @*@Html.EditorFor(model => model.Template.CategoryId, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.ValidationMessageFor(model => model.Template.CategoryId, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsTaskRepeatable, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Template.IsTaskRepeatable, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.IsTaskRepeatable)
-                    @Html.ValidationMessageFor(model => model.IsTaskRepeatable, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Template.IsTaskRepeatable)
+                    @Html.ValidationMessageFor(model => model.Template.IsTaskRepeatable, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.RepeatPeriod, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Template.RepeatPeriod, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.RepeatPeriod, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.RepeatPeriod, "", new { @class = "text-danger" })
+                @Html.EnumDropDownListFor(model => model.Template.RepeatPeriod, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Template.RepeatPeriod, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.MoveToFirstWorkDay, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Template.MoveToFirstWorkDay, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.MoveToFirstWorkDay)
-                    @Html.ValidationMessageFor(model => model.MoveToFirstWorkDay, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.Template.MoveToFirstWorkDay)
+                    @Html.ValidationMessageFor(model => model.Template.MoveToFirstWorkDay, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
