--- a/ToDoMvc/Views/Shared/_Layout.cshtml
+++ b/ToDoMvc/Views/Shared/_Layout.cshtml
@@ -37,7 +37,9 @@
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/Scripts/require.js")
     @Scripts.Render("~/bundles/app")
+    @Scripts.Render("~/Scripts/main.js")
     @RenderSection("scripts", required: false)
 </body>
 </html>
