--- a/ToDoMvc/Views/Home/Index.cshtml
+++ b/ToDoMvc/Views/Home/Index.cshtml
@@ -14,8 +14,12 @@
         </div>
     }
 </div>
-<div class="row todo-board">
-    <div class="col-md-12 template-area">
+<div class="row">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10 template-area">
         
+    </div>
+    <div class="col-md-1">
     </div>
 </div>
