--- a/ToDoMvc/Content/Site.css
+++ b/ToDoMvc/Content/Site.css
@@ -108,6 +108,7 @@ ul {
 }
 
 .template-area {
+    background-color: #D8D8D8;
     display: inline-block;
-    padding: 0 5px 0 0;
+    padding: 5px;
 }
