--- a/ToDoMvc/Views/Categories/Details.cshtml
+++ b/ToDoMvc/Views/Categories/Details.cshtml
@@ -19,11 +19,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Color)
+            @Html.DisplayNameFor(model => model.BackgroundColor)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Color)
+            @Html.DisplayFor(model => model.BackgroundColor)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.ForegroundColor)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ForegroundColor)
         </dd>
 
     </dl>
