--- a/ToDoMvc/Views/Categories/Index.cshtml
+++ b/ToDoMvc/Views/Categories/Index.cshtml
@@ -15,7 +15,10 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Color)
+            @Html.DisplayNameFor(model => model.BackgroundColor)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ForegroundColor)
         </th>
         <th></th>
     </tr>
@@ -26,7 +29,10 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Color)
+            @Html.DisplayFor(modelItem => item.BackgroundColor)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ForegroundColor)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CategoryId }) |
