--- a/ToDoMvc/Views/Home/Index.cshtml
+++ b/ToDoMvc/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <a id="moveOneDateAfter" style="float: right" href="#">&rArr;</a>
 <br />
 <div class="row todo-board">
-    
+
 </div>
 <div class="row">
     <div class="col-md-1">
@@ -18,7 +18,17 @@
     </div>
 </div>
 
-<div id="createTaskDialog" title="Create task">
-    <p>test</p>
+<div id="createTaskDialog" class="col-md-8" title="Create task" data-date="" data-templateid="">
+    <div class="form-horizontal">
+        <h4>Create task</h4>
+        <hr>
+
+        <div class="form-group">
+            <label class="control-label col-md-2" for="Dialog_TaskName">Name</label>
+            <div class="col-md-10">
+                <input class="form-control text-box single-line" id="Dialog_TaskName" type="text" value="">
+            </div>
+        </div>
+    </div>
 </div>
 
