--- a/ToDoMvc/Views/Shared/_Layout.cshtml
+++ b/ToDoMvc/Views/Shared/_Layout.cshtml
@@ -35,8 +35,9 @@
         @RenderBody()
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/jquery-2.1.3.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/Scripts/require.js")
     @Scripts.Render("~/bundles/app")
     @Scripts.Render("~/Scripts/main.js")
